--- a/stages/uat/kustomization.yaml
+++ b/stages/uat/kustomization.yaml
@@ -14,5 +14,5 @@ patches:
     kind: Service
     name: kargo-demo
 images:
-- name: nginx
-  newTag: 1.26.0
+- name: artifactory.sandbox.gitops.1keyes.net/te-docker-release/gitops/test-image
+  newTag: 1.1.0
